# pandas2polars

./: README.md  pyproject.toml
