[tool.poetry]
name = "pandas2polars"
version = "0.1.0"
description = ""
authors = ["Igor Mintz <igor@viz.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
polars = "^1.22.0"
pyarrow = "^19.0.0"
pandas = "^2.2.3"
altair = "^5.5.0"
vegafusion = "^2.0.2"
vl-convert-python = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
